new proj/src/objects/GE_PW_Country_Business_Legal_Structure__c.object
<CustomObject>
    <fields>
        <fullName>GE_PW_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IS Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_BusEntCount__c</fullName>
        <label>Business Entity Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>GE_HQ_Country__c</referenceTo>
        <relationshipLabel>Country Business Legal Structure</relationshipLabel>
        <relationshipName>Country_Business_Legal_Structure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PW_LegalStruct__c</fullName>
        <label>Legal Structure</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Country Business Legal Structure</label>
    <nameField>
        <displayFormat>CBL-{0000}</displayFormat>
        <label>Country Business Legal Structure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Business Legal Structure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>